# MultiAgents-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  commitlint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  功能对比与可行性分析.md  技术调研报告.md  接口文档-ClaudeCode-vs-CodexCLI.md  风险解决方案.md
.github/: CODEOWNERS  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs
src-tauri/src/adapter/: claude.rs  codex.rs  mod.rs  openclaw.rs  opencode.rs
src-tauri/src/commands/: manifest.rs  mcp.rs  mod.rs  plugin.rs  preset.rs  resource.rs  screenshot.rs  session.rs  settings.rs  skill.rs
src-tauri/src/database/: connection.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/database/dao/: agent_tool.rs  extension.rs  mod.rs  preset.rs  session.rs  settings.rs
src-tauri/src/linker/: detector.rs  layer2.rs  layer3.rs  mod.rs
src-tauri/src/manager/: mcp.rs  mod.rs  plugin.rs  preset.rs
src-tauri/src/monitor/: hooks.rs  mod.rs  openclaw_parser.rs  opencode_parser.rs  parser.rs  process.rs  status.rs
src-tauri/src/plugins/: system_tray.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/manifest/: mod.rs  store.rs  types.rs  update_checker.rs  validator.rs
src-tauri/src/session/: mod.rs  model.rs
src-tauri/src/terminal/: applescript.rs  iterm.rs  mod.rs  tmux.rs
src-tauri/src/window/: mod.rs  terminal_app.rs
src-tauri/tests/: dao_test.rs  linker_test.rs  support.rs
(+157 files in other folders)
