[package]
name = "multi-agents-manager"
version = "0.1.0"
description = "多 Agent 编程工具统一管理平台"
authors = ["jarvis"]
edition = "2021"

[lib]
name = "multi_agents_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rusqlite = { version = "0.32", features = ["bundled"] }
dashmap = "6"
tokio = { version = "1", features = ["full"] }
fs2 = "0.4"
notify = "7"
toml = "0.8"
toml_edit = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"
